# Block_Kriging

./: Build_LHS_Covariance_Matrix.cpp  Build_LHS_Covariance_Matrix.h  Build_RHS_Covariance_matrix.cpp  Build_RHS_Covariance_matrix.h  CMakeLists.txt  Calculate_Estimates.cpp  Calculate_Estimates.h  Covariance_Block_Block.cpp  Covariance_Block_Block.h  Covariance_Point_Block.cpp  Covariance_Point_Block.h  Covariance_Point_Point.cpp  Covariance_Point_Point.h  LPM_UFRGS_Block_Kriging.cpp  LPM_UFRGS_Block_Kriging.h  LPM_UFRGS_Block_Kriging.ui  Solve_Kriging_System.cpp  Solve_Kriging_System.h  common.h  library_init.cpp
cmake/: NSIS.template.in
cmake/modules/: FindAR2GEMS.cmake
